docs: 更新 README 文档并调整版本至 3.5.15